Share Post Meta

--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -220,6 +220,11 @@ html(lang='en')
           }
           window.addEventListener('scroll', initializeFreshChat)
 
+          //Share Button Meta
+          meta(property='og:url' content='https://www.goodearth.in')
+          meta(property='og:title' content='Good Earth – Stylish Sustainable Luxury Retail | Goodearth.in')
+
+
     body
         script(src='https://platform.linkedin.com/in.js', type='text/javascript').
           lang: en_US
