--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -220,15 +220,10 @@ html(lang='en')
           }
           window.addEventListener('scroll', initializeFreshChat)
 
-          //Share Button Meta
-          meta(property='og:url' content='https://www.goodearth.in')
-          meta(property='og:title' content='Good Earth – Stylish Sustainable Luxury Retail | Goodearth.in')
-
-
     body
         script(src='https://platform.linkedin.com/in.js', type='text/javascript').
           lang: en_US
-        script(type='IN/Share', data-url='https://www.linkedin.com').
+        script(type='IN/Share', data-url='https://www.goodearth.in').
         #fb-root
         script(async='', defer='', crossorigin='anonymous', src='https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v15.0', nonce='WeI6CMhM')
         noscript.
