--- a/src/components/GrowlMessage/styles.scss
+++ b/src/components/GrowlMessage/styles.scss
@@ -13,19 +13,26 @@
 
 .inner-container {
     background-color: rgba(0, 0, 0, .7);
-    color: $white;
-    padding: 30px 20px 25px 20px;
-    font-size: 12px;
+    @include b4_12px_montserrat_white();
+    letter-spacing: 0.36px;
+    padding: 15px;
     text-align: center;
     width: 200px;
-    font-weight: 300;
     line-height: 20px;
-    letter-spacing: 1px;
     margin-bottom: 5px;
+    border-radius: 10px;
+    display: flex;
+    .separator{
+        background: #ffffff40;
+        margin-left: 10px;
+        margin-right: 15px;
+        width: 4px;
+    }
     span {
-        position: absolute;
-        top: 10px;
-        right: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
     }
     a {
         color: #fff;
