--- a/src/components/PlpDropDown/styles.scss
+++ b/src/components/PlpDropDown/styles.scss
@@ -190,3 +190,9 @@
   opacity: 0;
   transition: opacity 0.3s ease-in;
 }
+
+.cross_icon{
+  float: right;
+  font-size: 14px;
+  margin-top: 4px;
+}
