--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -1009,6 +1009,16 @@
       }
     }
   }
+  iframe{
+    height: calc(100% - 170px);
+  }
+  .footer{
+    background: #fff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+  }
   .cta {
     bottom: 40px;
     position: absolute;
