--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -1018,6 +1018,11 @@
     bottom: 0;
     width: 100%;
     height: 80px;
+    box-shadow: -1px -2px 12px #0000001d;
+    display: flex;
+    padding: 0% 8%;
+    flex-direction: column;
+    justify-content: center;
   }
   .cta {
     bottom: 40px;
