fixed header position

--- a/src/components/MobileDropdown/styles.scss
+++ b/src/components/MobileDropdown/styles.scss
@@ -28,6 +28,7 @@
         position: fixed;
         height: 50px;
         padding: 10px 20px 4px 20px;
+        top: 85px;
         .filter-cross {
             line-height: 30px;
             .icon_cross {
