--- a/src/components/CeriseCard/styles.scss
+++ b/src/components/CeriseCard/styles.scss
@@ -18,16 +18,32 @@
 }
 
 .cerise-card-left-wrp{
-    height: 100%;
+    // height: 100%;
     background: $cerise;
     padding: 30px;
-    width: 414px;
+    // width: 414px;
+    flex: 0 0 50%;
+    max-width: 50%;
 
-    @media (max-width: 992px) {
-        width: 50%;
-        &.mobile-width{
-            width: 100%;
+    &.left-max-width{
+        width: 414px;
+        max-width: 414px;
+        @media only screen and (max-width: 992px) {
+            width: 50%;
+            max-width: 50%;
         }
+    }
+
+    // @media (max-width: 992px) {
+    //     width: 50%;
+    //     &.mobile-width{
+    //         width: 100%;
+    //     }
+    // }
+
+    @media only screen and (max-width: 992px) {
+        flex: 0 0 100%;
+        max-width: 100%;
     }
     
     .header{
@@ -82,7 +98,7 @@
                 background-color: $cerise-light;
                 .progressbar{
                     border-radius: 10px;
-                    background-color: $white;
+                    background-color: $light-beige;
                 }
             }
         }
@@ -122,7 +138,7 @@
                     text-align: center;
                     padding:2px;
                     font-style: italic;
-                    color: $cerise;
+                    color: $cerise !important;
                     cursor: pointer;
                     @include h6_16px_lora_charcoal();
                 }
@@ -165,4 +181,8 @@
 
 .gold-background{
     background-color: $gold;
+}
+
+.gold-color{
+    color: $gold;
 }
