--- a/src/containers/myAccount/components/CeriseDashboard/styles.scss
+++ b/src/containers/myAccount/components/CeriseDashboard/styles.scss
@@ -49,8 +49,27 @@
 .cerise-dashboard-header{
     display: flex;
     margin: auto;
-    justify-content: start;
-    height: 355px;
+    flex-wrap: wrap;
+    // justify-content: start;
+    // height: 355px;
+
+    .img-wrp{
+        flex: 0 0 50%;
+        max-width: 50%;
+
+        @media only screen and (max-width: 992px) {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+
+        img {
+            display: block;
+            max-width: 100%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 
     @media screen and (max-width:992px) {
         display: block;
