--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -511,3 +511,29 @@ ol {
 .gift-display{
   display: block;
 }
+
+.no-accordion{
+  margin-top: 20px;
+  border-bottom: 1px solid lightgray;
+  .content-heading{
+    margin-bottom: 10px;
+  }
+  .content{
+    div{
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+    ul{
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+    p{
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+    li{
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+  }
+}
