--- a/src/containers/pdp/components/WallpaperFAQ/styles.scss
+++ b/src/containers/pdp/components/WallpaperFAQ/styles.scss
@@ -209,7 +209,8 @@
 }
 
 .horizontal{
-    position: relative;
+    position: absolute;
+    right: 5px;
     width: 16px;
     height: 16px;
     font-family: $font-Montserrat;
