--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -564,3 +564,9 @@ ol {
 .content-heading {
   @include b4_12px_semibold_caps_charocal();
 }
+
+@media screen and (max-width: 767px){
+  .description{
+    padding-bottom: 20px;
+  }
+}
