--- a/src/containers/customer/styles.scss
+++ b/src/containers/customer/styles.scss
@@ -213,3 +213,11 @@
 .mobile-filter-menu-timer {
   top: $main-header + $timer-height;
 }
+
+.menu-container {
+  box-shadow: 0px -100px 0px white,
+              0px 100px 0px white, 
+              1px -100px 10px #EAEAEA,
+              1px 100px 10px #eaeaea;
+  height: 100vh;
+}
