added material on plp

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -388,6 +388,12 @@
         // cursor: not-allowed;
       }
     }
+    .materiallabel{
+      label {
+        padding-left: 35px;
+        margin-bottom: 0;
+      }
+    }
     input[type="checkbox"]:not(:checked) + label{
       @include b4_12px_montserrat_light_charcoal();
     }
@@ -587,6 +593,62 @@
   
 }
 
+.materiallabel{
+  label {
+    @include plp_color_filter();
+    text-transform: capitalize;
+    position: relative;
+}
+input[type="checkbox"]:checked + label{
+  @include b4_12px_montserrat_charcoal();
+}
+input[type="checkbox"]:not(:checked) + label{
+  @include b4_12px_montserrat_light_charcoal();
+}
+input[type="radio"]:not(:checked) + label:before,
+input[type="radio"]:checked + label:before, [type="checkbox"]:not(:checked) + label:before,
+input[type="checkbox"]:checked + label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 10px;
+  width: 18px;
+  height: 18px;
+  background-color: white;
+  border: 1px solid #9f9f9f;
+
+}
+input[type="radio"]:not(:checked) + label,
+input[type="radio"]:checked + label, [type="checkbox"]:not(:checked) + label,
+input[type="checkbox"]:checked + label {
+  padding-left: 30px;
+}
+input[type="checkbox"]:checked + label:before {
+  background-color: $aqua;
+  border: 1px solid $aqua;
+}
+  input[type="radio"]:not(:checked) + label:after,
+  input[type="radio"]:checked + label:after, [type="checkbox"]:not(:checked) + label:after,
+  input[type="checkbox"]:checked + label:after {
+    content: '';
+    display: block;
+    width: 6px;
+    height: 10px;
+    border: solid #ab1e56;
+    border-width: 0 2px 2px 0;
+    position: absolute;
+    top: 12px;
+    left: 6px;
+    font-size: 18px;
+    line-height: 0.8;
+    transition: all .1s;
+  }
+  input[type="checkbox"]:checked + label:after{
+    border: solid $white;
+    border-width: 0 2px 2px 0;
+  }
+}
+
 .colorlabel {
   li {
     label {
@@ -613,6 +675,36 @@
     border: 1px solid black;
   }
 }
+
+.materiallabel{
+    li {
+      label {
+        @include plp_filter_copy();
+        text-transform: capitalize;
+        position: relative;
+      }
+    }
+    input[type="radio"]:not(:checked) + label:after,
+    input[type="radio"]:checked + label:after, [type="checkbox"]:not(:checked) + label:after,
+    input[type="checkbox"]:checked + label:after {
+      content: '';
+      display: block;
+      width: 6px;
+      height: 10px;
+      border: solid #ab1e56;
+      border-width: 0 2px 2px 0;
+      position: absolute;
+      top: 12px;
+      left: 6px;
+      font-size: 18px;
+      line-height: 0.8;
+      transition: all .1s;
+    }
+    input[type="checkbox"]:checked + label:after{
+      border: solid $white;
+      border-width: 0 2px 2px 0;
+    }
+  }
 
 .multicolorlabel {
   input[type="radio"]:not(:checked) + label:before,
@@ -656,6 +748,15 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
   transition:max-height 0.3s ease-out;
   max-height:0 !important;
   .colorlabel {
+    label {
+      padding-left: 35px;
+      margin-bottom: 0;
+    }
+    .disableColors{
+      opacity: 0.5;
+    }
+  }
+  .materiallabel{
     label {
       padding-left: 35px;
       margin-bottom: 0;
