--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -28,7 +28,7 @@ html(lang='en')
               app_id:!{moengage},
               debug_logs: !{moengageId},
               cluster: "DC_3"
-              //- swPath: "/serviceworker.js"
+              //- swPath: "/moengageserviceworker.js"
           });
           Moengage.call_web_push();
         link(rel="manifest", href=`${manifest}`)
