--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -559,6 +559,7 @@
   // display: inline-block;
   width: 200%;
   transition: transform 0.3s;
+  height: 200%;
 }
 .mobile-main-menu {
   background-color: $white;
