--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -230,15 +230,15 @@ html(lang='en')
           <iframe src="https://www.googletagmanager.com/ns.html?id="+!{gtmdata}
             height="0" width="0" style="display:none;visibility:hidden"></iframe>
         div(id='main', class='main') !{content}
-        div !{newrelicScript}
+        //- div !{newrelicScript}
         div !{scripts}
-        //- div(id="chat-container" class='chat-container')
-        //- div(id='scrollToTop-btn' class='scrollToTop-btn-hidden' onClick='ScrollToTop()')
-        //-   i(class='icon_uparrow-white')
-          //- a(href='https://wa.me/+917669303665' target='_blank' rel='noopener noreferrer')
-          //-   div(id='whatsapp' class='whatsapp-img whatsapp-active')
-          //-     //- img(src="/static/images/whatsapp.svg", alt="whatsapp icon" width='40px')
-          //- div(id='fresh-chat', onclick='OpenChatBox()', class='fresh-chat active')
-          //-   i(class='icon-chat')
-          //- div(id='chat-button', onclick='OpenBox()', class='chat-button active')
-          //-   i(class='icon-question')
+        div(id="chat-container" class='chat-container')
+        div(id='scrollToTop-btn' class='scrollToTop-btn-hidden' onClick='ScrollToTop()')
+          i(class='icon_uparrow-white')
+          a(href='https://wa.me/+917669303665' target='_blank' rel='noopener noreferrer')
+            div(id='whatsapp' class='whatsapp-img whatsapp-active')
+              //- img(src="/static/images/whatsapp.svg", alt="whatsapp icon" width='40px')
+          div(id='fresh-chat', onclick='OpenChatBox()', class='fresh-chat active')
+            i(class='icon-chat')
+          div(id='chat-button', onclick='OpenBox()', class='chat-button active')
+            i(class='icon-question')
