--- a/src/components/GrowlMessage/styles.scss
+++ b/src/components/GrowlMessage/styles.scss
@@ -15,7 +15,7 @@
     @include b4_12px_montserrat_white();
     letter-spacing: 0.36px;
     padding: 15px;
-    text-align: center;
+    text-align: left;
     width: 340px;
     line-height: 20px;
     margin-bottom: 5px;
@@ -26,7 +26,7 @@
         background: #ffffff40;
         margin-left: 10px;
         margin-right: 15px;
-        width: 4px;
+        width: 2px;
     }
     span {
         display: flex;
