--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -992,6 +992,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 2px 2px black;
+    position: fixed;
+    z-index: 1;
+    box-shadow: 1px 0px 12px #0000001d;
     .header-content{
       flex-basis: 90%;
       display: flex;
@@ -1016,6 +1020,8 @@
   }
   iframe{
     height: calc(100% - 170px);
+    transform: translateY(90px);
+    z-index: 0;
     &.mobile{
       height: calc(100% - 150px);
     }
