--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -18,13 +18,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   &.fullscreen {
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     transform: translate(0,0);
+    &.fullscreen-adjust{
+      height: calc(100% - 56px);
+    }
   }
   &.bottom-align{
     top: unset;
