Loading Background added

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -1018,7 +1018,8 @@
       }
     }
   }
-  iframe{
+  .iframe-placeholder{
+    background-color: white;
     height: calc(100% - 170px);
     transform: translateY(90px);
     z-index: 0;
