Right Align Content

--- a/src/components/GrowlMessage/styles.scss
+++ b/src/components/GrowlMessage/styles.scss
@@ -22,6 +22,7 @@
     border-radius: 10px;
     display: flex;
     transition: transform 0.8s ease-in;
+    justify-content: flex-end;
     .separator{
         background: #ffffff40;
         margin-left: 10px;
