--- a/src/components/Zoom/styles.scss
+++ b/src/components/Zoom/styles.scss
@@ -52,7 +52,8 @@
 .close{
     margin-bottom: 40px;
     cursor: pointer;
-
+    height: 25px;
+    width: 100%;
     &.mobile {
         position: fixed;
         top: 26px;
