added fade in plp filters

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -384,6 +384,7 @@
         margin-bottom: 0;
       }
       .disableColors{
+        opacity: 0.5;
         // color: #4C4C4C;
         // cursor: not-allowed;
       }
@@ -392,6 +393,11 @@
       label {
         padding-left: 35px;
         margin-bottom: 0;
+      }
+      .disableColors{
+        opacity: 0.5;
+        // color: #4C4C4C;
+        // cursor: not-allowed;
       }
     }
     input[type="checkbox"]:not(:checked) + label{
